img width bug fix on mobile

--- a/src/components/Editor/Editor.scss
+++ b/src/components/Editor/Editor.scss
@@ -169,3 +169,9 @@
     font-family: 'Spartan', sans-serif;
     font-weight: 900;
 }
+
+.ql-editor img {
+    @include media('sm') {
+        width: 100%;
+    }
+}
